2007-05-25  Martin Hunt  <hunt@redhat.com>

	* syscall.exp (test_procedure): Remove stray timeout assignment.

2007-05-07  Martin Hunt  <hunt@redhat.com>

	* signal.c (main):  Fix expected expression to accept
	both 32 and 64-bit pointers.

2007-05-01  Martin Hunt  <hunt@redhat.com>

	* statfs.c (main): Fix expected expression to accept
	both 32 and 64-bit pointers.

2007-04-24  David Wilder <dwilder@us.ibm.com>

	* syscall.exp: Enabled 64-bit tests on s390, 32-bit test to use -m31
	  on s390.

2007-04-23  Martin Hunt  <hunt@redhat.com>

	* clock.c (main): Ifdef SYS_time.

2007-04-23  Martin Hunt  <hunt@redhat.com>	

	* mmap.c (main): Use open() instead of creat().

2007-04-23  Martin Hunt  <hunt@redhat.com>
	
	* syscall.exp (test_procedure): For 64-bit machines, first
	run with "-m64" and then with "-m32".

2007-04-10  Martin Hunt  <hunt@redhat.com>

	* syscall.exp (test_procedure): Remove 
	test binaries when done.

2007-01-17  Martin Hunt  <hunt@redhat.com>

	* test.exp: Renamed to syscall.exp.

2007-01-15  Mike Mason  <mmlnx@us.ibm.com>

	* test.exp: test 32-bit binaries on ppc64

2007-01-09  Martin Hunt  <hunt@redhat.com>

	* test.exp, test.tcl, test-debug.tcl: PR 3524.
	Support for separtet source and obj trees.

2006-10-27  Martin Hunt  <hunt@redhat.com>

	* test.exp, test.tcl: Remove our own caching code
	and just use systemtap's new caching.

	* acct.c (main): Make pattern less selective so
	it works when run by root.

2006-10-23  David Smith  <dsmith@redhat.com>

	* test.exp (test_procedure): Handles cached module.

2006-09-26  David Smith  <dsmith@redhat.com>

	* test.tcl: Looks for 'staprun' instead of 'stpd'.

2006-07-21  Martin Hunt  <hunt@redhat.com>

	* signal.c: Fix expected pattern.

2006-06-26  Martin Hunt  <hunt@redhat.com>
	* stat.c: Add utime() test

2006-06-15  Martin Hunt  <hunt@redhat.com>
	* chmod.c: Results for some archs have
	4294967295 instead of -1. Fix expected results
	for now. 

2006-06-15  Martin Hunt  <hunt@redhat.com>