@@ -1,3 +1,8 @@
+2007-06-18  Martin Hunt  <hunt@redhat.com>
+
+	* syscall.exp (test_procedure): Use switch statements to clean
+	up the logic for setting flags for 64 and 32-bit passes.
+
 2007-05-25  Martin Hunt  <hunt@redhat.com>
 
 	* syscall.exp (test_procedure): Remove stray timeout assignment.
